# ag-wiz

./: .gitignore  CLEANUP_SYSTEM.md  CMakeLists.txt  CONTEXT_MANAGER_PRIMITIVES.md  README.md  TEST_COMMANDS.md  TODO.md  VIEWPORT_REFACTOR.md
_samples/: README.md  async_demo.py  merge_sort_demo.py  sorting_async_demo.py  test_01.py  test_02.py  test_03.py  test_04_octree.py  test_05_greedy.py  ui_labels_demo.py
algorithm-wizard/: ARCHITECTURE_UPDATE.md  MAIN_WINDOW_SETUP.md  SETUP_INSTRUCTIONS.md  TEST_COMMANDS.md  VIEWPORT_FIXES.md  VIEWPORT_HOLDER_SETUP.md  VIEWPORT_SETUP_INSTRUCTIONS.md  VIEWPORT_WORKFLOW.md  code_runner.gd  code_runner.gd.uid  debug_panel.gd.uid  export_presets.cfg  icon.svg.import  info.md  main_window.tscn  project.godot  test.gd  tweentest.gd  tweentest.gd.uid  window_selector_button_group.tres
algorithm-wizard/assets/fonts/: NotoSans-VariableFont_wdth,wght.ttf.import
algorithm-wizard/assets/icons/: editor.svg.import  icon.svg.import  logger.svg.import  no_camera.svg.import  plus.svg.import  viewport.svg.import
algorithm-wizard/assets/text/: no_pass.txt  post_processing_pass.txt  rasterization_pass.txt  vertex_pass.txt
algorithm-wizard/layouts/: preset_01.json
algorithm-wizard/scenes/: code_editor.tscn  logger.tscn  main_window.tscn  render_viz.tscn  script_tree.tscn  test.tscn  test.tscn86534379963.tmp  test.tscn86545651148.tmp  testtesttest.tscn  testtween.tscn  tile.gd  tile.gd.uid  tile.tscn  window_main.tscn
algorithm-wizard/scripts/: animation_manager.gd  animation_manager.gd.uid  async_script_runner.gd  async_script_runner.gd.uid  camera_2d_setup.gd  camera_3d_setup.gd.uid  camera_controller_2d.gd  camera_controller_3d.gd  code_runner.gd  debug_panel.gd  main_window.gd.uid  render_viz.gd  render_viz.gd.uid  script_box.gd  script_box.gd.uid  script_manager.gd  script_manager.gd.uid  test.gd.uid  tile.gd  tile_container.gd  tile_container.gd.uid  tile_engine.gd  tile_engine.gd.uid  tile_panel_container.gd.uid  tiling_manager.gd  tiling_manager.gd.uid  ui_label.gd  ui_label.gd.uid  viewport_holder.gd  viewport_holder.gd.uid  viewport_manager.gd  viewport_manager.gd.uid  window_main.gd  window_main.gd.uid
algorithm-wizard/scripts/_DECAP/: main_window.gd
algorithm-wizard/scripts/camera_api/: camera_2d_setup.gd.uid  camera_3d_setup.gd  camera_controller_2d.gd  camera_controller_2d.gd.uid  camera_controller_3d.gd  camera_controller_3d.gd.uid
algorithm-wizard/scripts/drawing_api/: drawing_api_2d.gd  drawing_api_2d.gd.uid  drawing_api_3d.gd  drawing_api_3d.gd.uid
algorithm-wizard/shaders/: grid.gdshader  grid.gdshader.uid  sky.gdshader  sky.gdshader.uid  wireframe.gdshader  wireframe.gdshader.uid
algorithm-wizard/themes/: main_theme.theme
algorithm-wizard/viewports/: 3d_viewport.tscn  test.tscn  testscripttest.gd  testscripttest.gd.uid  viewport_holder.tscn
cpp/: CMakeLists.txt
cpp/include/: data_buffer.hpp  hello_node.hpp  script_runtime.hpp  viewport_bridge.hpp
cpp/src/: data_buffer.cpp  hello_node.cpp  register_types.cpp  script_runtime.cpp  viewport_bridge.cpp
